app/will-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: will
  namespace: dev
  labels:
    app: will
spec:
  replicas: 1
  selector:
    matchLabels:
      app: will
  template:
    metadata:
      labels:
        app: will
    spec:
      containers:
        - name: playground
          image: "wil42/playground:v1"
          ports:
            - containerPort: 8888
