app/will-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: will-service
  namespace: dev
spec:
  selector:
    app: will-dep
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: ClusterIP
