app/will-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: will-ingress
  labels:
    app: will
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: will-service
            port:
              number: 80
